clusters/ko2/kilo/flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  namespace: kilo
spec:
  selector:
    matchLabels:
      app: anishflask01
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: anishflask01
    spec:
      containers:
      - name: flaskapp
        image: anishcorra/flask-demo:1.0.0
        ports:
        - containerPort: 8080
