clusters/ko2/kilo/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flasksvc
  namespace: kilo
spec:
  type: LoadBalancer
  selector:
    app: anishflask01
  ports:
  - port: 8080
    protocol: TCP
