clusters/ko2/kilo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: kilo
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - port: 80
    protocol: TCP
